<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_fragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_sport_fragment"
        android:icon="@drawable/ic_baseline_run_24"
        android:title="@string/title_sport" />

    <item
        android:id="@+id/navigation_find_fragment"
        android:icon="@drawable/ic_baseline_find_24"
        android:title="@string/title_find" />

    <item
        android:id="@+id/navigation_heart_rate_fragment"
        android:icon="@drawable/ic_baseline_mood_24"
        android:title="@string/title_heart_rate" />
    <item
        android:id="@+id/navigation_mine_fragment"
        android:icon="@drawable/ic_baseline_mine_24"
        android:title="@string/title_mine" />

</menu>